# mpv

./: meson.build  meson_options.txt
build-script/: conanfile.py  graph.html  profile_mac_armv8  profile_mac_armv8_mt  profile_win2019  profile_win2019_mt
ci/: build-macos.sh  x86_64-cross-file.txt
common/: version.c
conan/: conanbuild.sh  conanbuildenv-release-armv8.sh  conanrun.sh  conanrunenv-release-armv8.sh  deactivate_conanbuild.sh  deactivate_conanrun.sh
conan/include/aiengine/: BackendRunner.h  BlockingQueue.h  BufferedModelInput.h  CMBackend.h  CMInput.h  CMModel.h  CMOutput.h  CacheManager.h  Crypto.h  DeviceInfo.h  DeviceSelector.h  DiskCachable.h  DiskCachableQueue.h  FileFetcher.h  ImageUtil.h  Logger.h  MTSink.h  MacSystemInfo.h  ModelBackend.h  ModelBackendFactory.h  ModelInput.h  ModelManager.h  ModelOutput.h  OVBackend.h  OVInput.h  OVModel.h  OVOutput.h  OXBackend.h  OXInput.h  OXOutput.h  PriorityBlockingQueue.h  RTBackend.h  RTBuffer.h  RTInput.h  RTOutput.h  ResourceManager.h  StringUtil.h  SystemInfo.h  TemporaryFile.h  WebConnectionFactory.h  (+2 more)
conan/include/harfbuzz/: hb-features.h
conan/include/libavutil/: ffversion.h
conan/include/opencv4/opencv2/: cvconfig.h  opencv_modules.hpp
conan/include/opencv4/opencv2/core/: version.hpp
conan/include/openssl/: configuration.h
conan/include/videoai/: tvai.h  tvai_data.h  tvai_messages.h
conan/lib/: libaiengine.dylib  libavcodec.dylib  libavdevice.61.2.100.dylib  libavdevice.61.dylib  libavfilter.10.2.101.dylib  libavfilter.10.dylib  libavformat.61.3.103.dylib  libavformat.61.dylib  libavutil.59.16.101.dylib  libavutil.dylib  libcharset.1.dylib  libcrypto.3.dylib  libfreetype.6.20.1.dylib  libfreetype.6.dylib  libgio-2.0.0.dylib  libglib-2.0.0.dylib  libgmodule-2.0.0.dylib  libgobject-2.0.0.dylib  libgthread-2.0.0.dylib  libharfbuzz-gobject.0.dylib  libharfbuzz-subset.0.dylib  libharfbuzz.0.dylib  libiconv.2.dylib  libjpeg.9.dylib  liblcms2.2.dylib  libssl.3.dylib  libswresample.5.2.100.dylib  libswscale.8.2.100.dylib  libtiff.6.0.1.dylib  libtiffxx.6.0.1.dylib  libtvai.dylib  libvideoai.dylib  libvpx.7.dylib  libzimg.2.dylib  libzip.5.4.dylib
conan/lib/cmake/: conan-official-freetype-variables.cmake  conan-official-opencv-targets.cmake
conan/lib/engines-3/: capi.dylib  loader_attic.dylib  padlock.dylib
conan/lib/libaiengine.dylib.dSYM/Contents/: Info.plist
conan/lib/libaiengine.dylib.dSYM/Contents/Resources/Relocations/aarch64/: libaiengine.dylib.yml
conan/lib/libvideoai.dylib.dSYM/Contents/: Info.plist
conan/lib/ossl-modules/: fips.dylib  legacy.dylib
conan/lib/pkgconfig/: aom.pc  libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
filters/: f_lavfi.c
osdep/: threads-posix.h
osdep/mac/: meson.build
subprojects/: dav1d.wrap  libass.wrap  libplacebo.wrap  spirv-cross.wrap  vulkan-loader.wrap
